# iesb-projeto-final-qualidade-teste-software

./: README.md  locust.conf  pyproject.toml  serverest_test
estudo_caso/: __main__.py  cli.py  config.py  rota_produtos.py  rota_usuarios.py  settings.toml  teste_suite.py
estudo_caso/tests/: teste_suite.py
estudo_caso/tests/carrinhos/: rota_carrinhos.py
estudo_caso/tests/produtos/: rota_produtos.py
estudo_caso/tests/usuarios/: rota_usuarios.py
tests/: test_estudo_caso.py
