[tool.poetry]
name = "estudo-caso"
version = "0.1.0"
description = ""
authors = [
        "Alex de Oliveira Moreira <alex.moreira@iesb.edu.br>",
        "Davidson Pereira Campos <campos.eee@gmail.com>",
        "Fábio de Oliveira Sales <fabio.oliveira.sales@gmail.com>",
        "Gabriel Dennis Pereira de Faria <gabriel.dennis@iesb.edu.br>",
        "Natana Felix da Rocha <Nata_felix@hotmail.com>"
        ]
include = ["estudo_caso/settings.toml"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.8"
flake8 = "^4.0.1"
locust = "^2.8.6"
Faker = "^13.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.3.0"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.scripts]
teste_carga = "estudo_caso.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
